# memory_handle_pool_allocator

./: .gitignore  MODULE.bazel  Makefile  README.txt  WORKSPACE  mem_handle.hpp  test.cc
handle_pool/: BUILD.bazel  handle_pool.h
handle_pool/tests/: BUILD.bazel  test_handle_pool.cc
